# javascript-lambda-compiler

./: Cargo.toml  README.md
crates/mjsc-cli/: Cargo.toml  build.rs
crates/mjsc-cli/src/: commands.rs  js.rs  main.rs
crates/mjsc-cli/src/wasm_generator/: mod.rs  static.rs  transform.rs
crates/mjsc-core/: Cargo.toml
crates/mjsc-core/src/: lib.rs  main.rs  manetu.rs  runtime.rs  state.rs
