[workspace]
members = [
    "crates/mjsc-core",
    "crates/mjsc-cli",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Manetu, Inc"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

[workspace.dependencies]
wizer = "4.0.0"
wasmtime = "16"
wasmtime-wasi = "16"
wasi-common = "16"
anyhow = "1.0.81"
once_cell = "1.19"
javy = { git = "https://github.com/manetu/javy.git", tag = "v1.4.0-manetu.1" }

[profile.release]
lto = true
opt-level = 3
